@@ -5,128 +5,117 @@ import co.edu.javeriana.msc.turismo.order_management_microservice.orders.dto.Ord
 import co.edu.javeriana.msc.turismo.order_management_microservice.orders.services.OrderPurchaseService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.ResponseEntity;
+import org.springframework.test.annotation.DirtiesContext;
 
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.*;
 
+@SpringBootTest
+@DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
 class OrderPurchaseControllerTest {
 
-    @Mock
-    private OrderPurchaseService orderPurchaseService;
-
-    @InjectMocks
+    @Autowired
     private OrderPurchaseController orderPurchaseController;
+
+    @Autowired
+    private OrderPurchaseService orderPurchaseService;
 
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+
     }
 
     @Test
     void obtenerOrdenPorId() {
-        String orderId = "orden123";
-        OrderPurchaseResponse response = new OrderPurchaseResponse(
-                orderId,
-                LocalDateTime.now(),
-                LocalDateTime.now(),
-                null, null, null, Collections.emptyList(), 100.0
-        );
+        OrderPurchaseRequest request = new OrderPurchaseRequest("orden123", LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0);
+        String createdOrderId = orderPurchaseService.createOrderPurchase(request);
 
-        when(orderPurchaseService.findById(orderId)).thenReturn(response);
+        ResponseEntity<OrderPurchaseResponse> result = orderPurchaseController.getOrder(createdOrderId);
 
-        ResponseEntity<OrderPurchaseResponse> result = orderPurchaseController.getOrder(orderId);
-
-        assertEquals(response, result.getBody());
-        verify(orderPurchaseService, times(1)).findById(orderId);
+        assertEquals(200, result.getStatusCodeValue());
+        assertNotNull(result.getBody());
     }
 
     @Test
     void obtenerTodasLasOrdenes() {
-        List<OrderPurchaseResponse> orders = List.of(
-                new OrderPurchaseResponse("orden123", LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0)
-        );
-
-        when(orderPurchaseService.findAllOrderPurchases()).thenReturn(orders);
+        OrderPurchaseRequest request1 = new OrderPurchaseRequest("orden123", LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0);
+        OrderPurchaseRequest request2 = new OrderPurchaseRequest("orden124", LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 150.0);
+        orderPurchaseService.createOrderPurchase(request1);
+        orderPurchaseService.createOrderPurchase(request2);
 
         ResponseEntity<List<OrderPurchaseResponse>> result = orderPurchaseController.findAll();
 
-        assertEquals(orders, result.getBody());
-        verify(orderPurchaseService, times(1)).findAllOrderPurchases();
+        assertEquals(200, result.getStatusCodeValue());
+        assertNotNull(result.getBody());
+        assertTrue(result.getBody().size() > 1);
     }
 
     @Test
     void obtenerOrdenesAprobadasPorUsuario() {
         String userId = "user123";
-        List<OrderPurchaseResponse> orders = List.of(
-                new OrderPurchaseResponse("orden123", LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0)
-        );
-
-        when(orderPurchaseService.findAllPurchasedByUsers(userId)).thenReturn(orders);
+        OrderPurchaseRequest request = new OrderPurchaseRequest("orden123", LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0);
+        orderPurchaseService.createOrderPurchase(request);
 
         ResponseEntity<List<OrderPurchaseResponse>> result = orderPurchaseController.getPurchasedByUser(userId);
 
-        assertEquals(orders, result.getBody());
-        verify(orderPurchaseService, times(1)).findAllPurchasedByUsers(userId);
+        assertEquals(200, result.getStatusCodeValue());
+        assertNotNull(result.getBody());
+        assertTrue(result.getBody().size() >= 0);
     }
 
     @Test
     void obtenerOrdenesPorUsuario() {
         String userId = "user123";
-        List<OrderPurchaseResponse> orders = List.of(
-                new OrderPurchaseResponse("orden123", LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0)
-        );
-
-        when(orderPurchaseService.findAllOrdersByUsers(userId)).thenReturn(orders);
+        OrderPurchaseRequest request = new OrderPurchaseRequest("orden123", LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0);
+        orderPurchaseService.createOrderPurchase(request);
 
         ResponseEntity<List<OrderPurchaseResponse>> result = orderPurchaseController.getOrdersdByUser(userId);
 
-        assertEquals(orders, result.getBody());
-        verify(orderPurchaseService, times(1)).findAllOrdersByUsers(userId);
+        assertEquals(200, result.getStatusCodeValue());
+        assertNotNull(result.getBody());
+        assertTrue(result.getBody().size() >= 0);
     }
 
     @Test
     void crearNuevaOrden() {
         OrderPurchaseRequest request = new OrderPurchaseRequest("orden123", LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0);
-        String createdOrderId = "orden123";
-
-        when(orderPurchaseService.createOrderPurchase(request)).thenReturn(createdOrderId);
 
         ResponseEntity<String> result = orderPurchaseController.createOrder(request);
 
-        assertEquals(createdOrderId, result.getBody());
         assertEquals(201, result.getStatusCodeValue());
-        verify(orderPurchaseService, times(1)).createOrderPurchase(request);
+        assertNotNull(result.getBody());
+        assertEquals("orden123", result.getBody());
     }
 
     @Test
     void actualizarEstadoDeOrden() {
         String orderId = "orden123";
-        OrderPurchaseRequest request = new OrderPurchaseRequest("orden123", LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0);
-        OrderPurchaseResponse response = new OrderPurchaseResponse(orderId, LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0);
+        OrderPurchaseRequest request = new OrderPurchaseRequest(orderId, LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0);
+        orderPurchaseService.createOrderPurchase(request);
 
-        when(orderPurchaseService.updateOrderPurchaseEstado(orderId, request)).thenReturn(response);
+        OrderPurchaseRequest updateRequest = new OrderPurchaseRequest(orderId, LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 120.0);
 
-        ResponseEntity<OrderPurchaseResponse> result = orderPurchaseController.updateOrderEstado(orderId, request);
+        ResponseEntity<OrderPurchaseResponse> result = orderPurchaseController.updateOrderEstado(orderId, updateRequest);
 
-        assertEquals(response, result.getBody());
-        verify(orderPurchaseService, times(1)).updateOrderPurchaseEstado(orderId, request);
+        assertEquals(200, result.getStatusCodeValue());
+        assertNotNull(result.getBody());
     }
 
     @Test
     void eliminarOrden() {
         String orderId = "orden123";
+        OrderPurchaseRequest request = new OrderPurchaseRequest(orderId, LocalDateTime.now(), LocalDateTime.now(), null, null, null, Collections.emptyList(), 100.0);
+        orderPurchaseService.createOrderPurchase(request);
 
         ResponseEntity<Void> result = orderPurchaseController.deleteOrder(orderId);
 
         assertEquals(204, result.getStatusCodeValue());
-        verify(orderPurchaseService, times(1)).deleteOrderPurchase(orderId);
+
     }
 }
